# symcc

./: .adacore-gitlab-ci.yml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_arm  Interception.cpp  LibcWrappers.cpp  README  README.md  Runtime.c  Runtime.cpp  Runtime.h  Shadow.cpp  Shadow.h  Symbolize.cpp  Vagrantfile  sample.cpp  symcc.in
.github/workflows/: check_style.yml  create_push_docker_image.yml  run_tests.yml
compiler/: Main.cpp  Pass.cpp  Pass.h  Runtime.cpp  Runtime.h  Symbolizer.cpp  Symbolizer.h  sym++.in  symcc.in
docs/: 32-bit.txt  Backends.txt  C++.txt  Concreteness.txt  Configuration.txt  Experiments.txt  Fuzzing.txt  Ideas.txt  Libc.txt  Optimization.txt  Testing.txt
qsym_backend/: CMakeLists.txt  RuntimeQsym.cpp  RuntimeQsym.h  pin.H  support.cpp
runtime/: CMakeLists.txt  Config.cpp  Config.h  GarbageCollection.cpp  GarbageCollection.h  LibcWrappers.cpp  LibcWrappers.h  Runtime.h  RuntimeCommon.cpp  RuntimeCommon.h  RuntimeSimple.cpp  RuntimeSimple.h  Shadow.cpp  Shadow.h  ShadowTrace.cpp  ShadowTrace.h  Tracer.cpp  Tracer.h
runtime/bindings/: README
runtime/bindings/ada/: README  symcc.ads  symcc.gpr
runtime/common_only/: CMakeLists.txt  Runtime.cpp  Runtime.h
runtime/qsym_backend/: CMakeLists.txt  Runtime.cpp  Runtime.h  pin.H
runtime/rust_backend/: CMakeLists.txt  README.md  Runtime.cpp  Runtime.h  RustRuntime.h
runtime/simple_backend/: CMakeLists.txt  Runtime.cpp  Runtime.h
runtime/test_wrappers/: test_atoi.c  test_atol.c  test_strcmp.c  test_strcpy.c  test_strlen.c  test_strncmp.c
test/: CMakeLists.txt  README  arrays.c  arrays.test32  atoi.c  atol.c  bcopy_bcmp_bzero.c  bool_cast.c  bswap.c  bswap.test32  concrete_structs.ll  file_input.c  file_input.test32  floats.c  floats.test32  globals.c  globals.test32  if.c  if.test32  integers.c  integers.test32  large_alloc.c  large_alloc.test32  lit.cfg  lit.site.cfg.in  load_store.ll  loop.c  loop.test32  memcpy.c  memcpy.test32  memory_input.c  pointers.c  pointers.test32  propagation_select.c  read.c  read.test32  strcmp.c  strcpy.c  strings.c  strings.test32  (+14 more)
test/regression/: cxa_vector.ll
util/: pure_concolic_execution.sh  quicktest.sh
util/symbolic_trace/: .gitignore  README.md  pyproject.toml
util/symbolic_trace/symcctrace/: __init__.py  data.py  parsing.py
util/symcc_fuzzing_helper/: .gitignore  Cargo.toml
util/symcc_fuzzing_helper/src/: main.rs  symcc.rs
