[package]
name = "symcc_fuzzing_helper"
version = "0.1.0"
authors = ["Sebastian Poeplau <sebastian.poeplau@eurecom.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tempfile = "3.1"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
regex = "1"
