# This file is part of SymCC.
#
# SymCC is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# SymCC is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# SymCC. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "symcc_fuzzing_helper"
version = "0.1.0"
authors = ["Sebastian Poeplau <sebastian.poeplau@eurecom.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
structopt = "0.3"
tempfile = "3.1"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
regex = "1"
